<resources>
    <string name="app_name">CiberQuiz</string>
    <!-- Strings used for fragments for navigation -->
    <string name="portada_album">Portada del álbum</string>
    <string name="boton_cancion_anterior">Canción anterior</string>
    <string name="boton_reproducir">Reproducir música</string>
    <string name="boton_detener">Detener música</string>
    <string name="boton_repetir">Repetir canción</string>
    <string name="boton_cancion_siguiente">Siguiente canción</string>
    <string name="volver_al_menu">VOLVER AL MENÚ</string>
    <string name="puntuacion_ronda">Puntuación de la ronda</string>
    <string name="puntos_totales_acumulados">Puntos totales acumulados</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="error_email_vacio">⚠️ Por favor, ingresa tu correo electrónico</string>
    <string name="error_password_vacio">⚠️ Por favor, ingresa tu contraseña</string>
    <string name="error_email_formato_invalido">❌ El correo electrónico no tiene un formato válido</string>
    <string name="exito_sesion_iniciada">✅ Sesión iniciada correctamente</string>
    <string name="puntuacion_final">PUNTUACIÓN FINAL: %d</string>
    <string name="hint_correo_electronico">Correo electrónico</string>
    <string name="hint_contrasena">Contraseña</string>
    <string name="boton_iniciar_sesion">INICIAR SESIÓN</string>
    <string name="descripcion_fondo">Fondo de inicio de sesión</string>
    <string name="descripcion_logo">Logo de la aplicación</string>
    <string name="menu_titulo">MENÚ</string>
    <string name="boton_cerrar_sesion">Cerrar la sesión</string>
    <string name="boton_puntos">Puntos</string>
    <string name="boton_empezar_quiz">Empezar el Quiz</string>
    <string name="descripcion_fondo_menu">Fondo del menú principal</string>
    <string name="pregunta1_titulo">PREGUNTA 1</string>
    <string name="pregunta1_enunciado">¿Cuál de las siguientes contraseñas sería más segura?</string>
    <string name="pregunta1_opcion1">123456</string>
    <string name="pregunta1_opcion2">M1c0ntr4s3ñ4!</string>
    <string name="pregunta1_opcion3">qwerty</string>
    <string name="pregunta1_opcion4">password</string>
    <string name="boton_salir_quiz">Salir Quiz</string>
    <string name="boton_siguiente">Siguiente</string>
    <string name="descripcion_fondo_preguntas">Fondo de preguntas</string>
    <string name="pregunta2_titulo">PREGUNTA 2</string>
    <string name="pregunta2_enunciado">¿Qué significa el término phishing?</string>
    <string name="pregunta2_opcion1">Red rápida</string>
    <string name="pregunta2_opcion2">Virus</string>
    <string name="pregunta2_opcion3">Cifrado</string>
    <string name="pregunta2_opcion4">Correo falso</string>
    <string name="pregunta3_titulo">PREGUNTA 3</string>
    <string name="pregunta3_enunciado">¿Cuál de estos  sms es un ejemplo de phishing?</string>
    <string name="pregunta3_imagen_gym">Mensaje de phishing del gimnasio</string>
    <string name="pregunta3_imagen_lowi">Mensaje de phishing de Lowi</string>
    <string name="pregunta3_imagen_dgt">Mensaje de phishing de la DGT</string>
    <string name="pregunta3_imagen_segsoc">Mensaje de phishing de la Seguridad Social</string>
    <string name="pregunta4_titulo">PREGUNTA 4</string>
    <string name="pregunta4_enunciado">¿Qué protocolo se utiliza para navegar de forma segura en la web?</string>
    <string name="pregunta4_label_spinner">Selecciona tu respuesta:</string>
    <string name="pregunta5_titulo">PREGUNTA 5</string>
    <string name="pregunta5_enunciado">¿Qué acción es recomendable para proteger tu cuenta online?</string>
    <string name="puntos_titulo">PUNTOS</string>
    <string name="puntos_texto_final">Tu puntuación  \nfinal es: </string>
    <string name="boton_reiniciar_quiz">Reiniciar Quiz</string>
    <string name="boton_menu">Menú</string>
    <string name="descripcion_fondo_puntos">Fondo de pantalla de puntuación</string>
    <string-array name="protocolos_opciones">
        <item>Selecciona una opción</item>
        <item>HTTP</item>
        <item>HTTPS</item>
        <item>FTP</item>
        <item>SMTP</item>
    </string-array>
    <string-array name="opciones_seguridad">
        <item>Cambiar clave</item>
        <item>Usar PIN</item>
        <item>Verificación 2FA</item>
        <item>Antivirus</item>
    </string-array>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>