<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/foto_musica">

    <!-- PORTADA -->
    <ImageView
        android:id="@+id/imgPortada"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/portada1"
        android:contentDescription="@string/portada_album" />

    <!-- FILA DE BOTONES -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <ImageButton
            android:id="@+id/btn_anterior"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@null"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/anterior"
            android:contentDescription="@string/boton_cancion_anterior" />

        <ImageButton
            android:id="@+id/btn_play"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@null"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/reproducir"
            android:contentDescription="@string/boton_reproducir" />

        <ImageButton
            android:id="@+id/btn_detener"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@null"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/detener"
            android:contentDescription="@string/boton_detener" />

        <ImageButton
            android:id="@+id/btn_repetir"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@null"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/repetir"
            android:contentDescription="@string/boton_repetir" />

        <ImageButton
            android:id="@+id/btn_siguiente"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@null"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/siguiente"
            android:contentDescription="@string/boton_cancion_siguiente" />
    </LinearLayout>

    <!-- BOTÓN VOLVER AL MENÚ -->
    <Button
        android:id="@+id/btnVolverMenu"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#1976D2"
        android:text="@string/volver_al_menu"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        android:gravity="center" />

</LinearLayout>